@@ -6,8 +6,7 @@ Requirements
   Serial: PySerial (http://pyserial.sf.net)
   SSH: PyCrypto (http://pycrypto.sf.net, recommended version at least 1.9a6)
        PyPAM (optional - http://www.tummy.com/Software/PyPam/index.html)
-        TGmp (optional -
-            http://www.twistedmatrix.com/users/z3p/files/tgmp-1.0.tar.gz) 
+        GMPy (optional - http://gmpy.sf.net)
         PyShadow (optional -
             http://www.twistedmatrix.com/users/z3p/files/pyshadow-0.1.tar.gz)
   On Windows win32all is recommended (or ActivePython)
